<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textViewPaymentResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/TitleResume"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/moneyDialogTextColor" />
<TextView
        android:id="@+id/textViewSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"      
        android:text="@string/lblSubject"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/moneyDialogTextColor"
        android:layout_below="@+id/textViewPaymentResume" />

    <EditText
        android:id="@+id/txtSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewSubject"
        android:ems="10"
        android:hint="@string/txtPlaceHolderSubject" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtSubject"
        android:text="@string/lblAmount"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="@color/moneyDialogTextColor"/>

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewAmount"
        android:ems="10"
        android:inputType="number"/>
</RelativeLayout>